--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ header {
     padding: 20px 0;
 }
 
+#presentacion {
+    object-fit: cover;
+}
+
 section {
     padding: 0px;
 }
@@ -55,6 +59,43 @@ footer {
 
 .slide {
     min-width: 100%;
+}
+
+/* Formulario */
+
+.container {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    margin: 0 auto;
+}
+
+label,
+input,
+select {
+    margin-bottom: 10px;
+}
+
+input[type="submit"] {
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+input[type="submit"]:hover {
+    background-color: #45a049;
 }
 
 /* Estilos de Flexbox */
